# BitLink21

./: .dockerignore  .env.example  .gitignore  DEV-SERVER-HOWTO.md  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  test-docker.sh  umbrel-app.yml
backend/: app.py  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
backend/alembic/: README.md
backend/audio/: audiobroadcaster.py  audiostreamer.py  deepgramtranscriptionworker.py  geminitranscriptionworker.py  transcriptionworker.py
backend/bitlink21/: __init__.py  beacon_afc.py  ber_test.py  csma.py  encryption.py  modem.py  payload_router.py  schemas.py  ssp_frame.py  storage.py  test_tone.py  tx_worker.py
backend/bitlink21/plugins/: __init__.py  bitcoin_tx.py  generic_data.py  lightning_invoice.py
backend/common/: appconfig.py  arguments.py  constants.py  logger.py  sdrconfig.py
backend/constants/: __init__.py
backend/db/: bitlink21_models.py  models.py
backend/demodulators/: afskdecoder.py  amdemodulator.py  audiorecorder.py  basedecoder.py  basedecoderprocess.py  bpskdecoder.py  fmdemodulator.py  fmstereodemodulator.py  fskdecoder.py  gfskdecoder.py  gmskdecoder.py  iqrecorder.py  loradecoder.py  morsedecoder.py  ssbdemodulator.py  sspmodem.py  sstvdecoder.py
backend/dsp/: __init__.py  iq_bridge.py  qo100_manager.py  streaming_flowgraph.py
backend/fft/: waterfallgenerator.py
backend/handlers/: socket.py
backend/handlers/entities/: __init__.py  bitlink21.py  hardware.py  sdr.py  vfo.py
backend/hardware/: plutosdr.py
backend/pipeline/config/: decoderconfig.py  decoderconfigservice.py
backend/pipeline/orchestration/: processlifecycle.py  processmanager.py
backend/pipeline/registries/: decoderregistry.py
backend/server/: scheduler.py  shmmonitor.py  startup.py  version.py
backend/tasks/: satdumpprocessor.py  soapysdrdiscovery.py  tlesync.py  waterfallgenerator.py
backend/telemetry/: __init__.py
backend/tests/: __init__.py  conftest.py  test_tracking_events.py
backend/tracker/: runner.py
backend/tracking/: events.py
backend/workers/: plutosdrworker.py
cli/: bitlink21
core/: Dockerfile  VERSION  requirements.txt
core/src/: __init__.py  debug_routes.py  logging_config.py  main.py  payload_router.py  radio_command.py  radio_routes.py  rx_listener.py
core/src/plugins/: bitcoin_tx.py  generic_data.py  lightning_invoice.py
cryptoice-bitlink21/: docker-compose.yml  exports.sh  umbrel-app.yml
frontend/: TESTING.md  index.html  package-lock.json  package.json  setup-tests.sh
frontend/e2e/: settings.spec.js  smoke.spec.js
frontend/src/: main.jsx
frontend/src/components/bitlink21/: bitcoin-page.jsx  bitlink21-slice.jsx  identity-page.jsx  lightning-page.jsx  messages-page.jsx  stats-panel.jsx
frontend/src/components/common/: custom-icons.jsx  dataurl-icons.jsx  store.jsx
frontend/src/components/dashboard/: connection-popover.jsx  dashboard-layout.jsx  location-popover.jsx
frontend/src/components/filebrowser/: filebrowser-main.jsx
frontend/src/components/hardware/: sdr-table.jsx
frontend/src/components/overview/: overview-map.jsx  passes-table-settings-dialog.jsx  satellites-table-settings-dialog.jsx
frontend/src/components/qo100/: beacon-panel.jsx  qo100-layout.jsx  rx-panel.jsx  tx-panel.jsx
frontend/src/components/settings/: about.jsx  preferences-form.jsx  preferences-slice.jsx
frontend/src/components/waterfall/: bandplans.jsx  beacon-lock-panel.jsx  beacon-tracking-panel.jsx  constellation-diagram.jsx  (+11 more)
frontend/src/config/: branding.jsx  navigation.jsx
frontend/src/hooks/: useSocketEventHandlers.jsx
frontend/src/i18n/: config.js
frontend/src/themes/: README.md  theme-configs.js
radio/: CMakeLists.txt  Dockerfile  VERSION
radio/src/: beacon_lock.cpp  beacon_lock.h  csma.cpp  csma.h  dsp_common.cpp  dsp_common.h  hw_plutosdr.cpp  hw_plutosdr.h  logger.cpp  logger.h  main.cpp  radio_controller.cpp  radio_controller.h  rx_dsp_psk.cpp  rx_dsp_psk.h  ssp.cpp  ssp.h  tx_dsp_psk.cpp  tx_dsp_psk.h  ws_server.cpp  ws_server.h
server-prep/: server-setup.sh
web-ui/: Dockerfile  Dockerfile.dev  VERSION  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-ui/public/: index.html
web-ui/src/: App.css  App.jsx
web-ui/src/components/: BerTestPanel.jsx  BottomStatusBar.jsx  CalibrationPanel.jsx  Constellation.jsx  DebugPanel.jsx  DiagnosticsStrip.jsx  IdentityPanel.jsx  MessagePanel.jsx  ModemPanel.jsx  RadioControls.jsx  SettingsPanel.jsx  SignalMetrics.jsx  StatusBar.jsx  TabBar.jsx  Toast.jsx  Waterfall.jsx
web-ui/src/lib/: api.js  useToast.js  websocket.js
(+32 files in other folders)
